--- a/search_results.html
+++ b/search_results.html
@@ -6,6 +6,7 @@
     <title>Tasbeera</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="includes/css/main.css">
+    <link rel="stylesheet" href="includes/css/searchResults">
     <script src="https://kit.fontawesome.com/78dee55a2e.js" crossorigin="anonymous"></script>
     <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -53,7 +54,19 @@
 
             </nav>
         </header>
-      
+      <div class="grid page-grid">
+        <div class="full-grid">
+          <div class="results-card">
+            <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
+            <div class="results-description">
+              <h2>MC'Donald</h2>
+              <p class="card-description">Burgers, Sandwiches</p>
+              <p class="card-description">rate:3.50 (450)</p>
+              <p class="card-description">30-45mins Delievery: 15:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
     <div class="dialog" id="signin-dialog">
