search results page is done

--- a/search_results.html
+++ b/search_results.html
@@ -54,56 +54,53 @@
 
             </nav>
         </header>
-      <div class="grid-row">
-        <div class="full-row grid-full">
-          <div class="results-card">
-            <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
-            <div class="results-description">
-              <h2>MC'Donald</h2>
-              <p >Burgers, Sandwiches<br>
-                rate:3.50 (450)<br>
-              30-45mins Delievery: 15:00
-            </p>
-            </div>
+
+        <div class="results-card">
+          <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
+          <div class="results-description">
+            <h2>MC'Donald</h2>
+            <p >Burgers, Sandwiches<br>
+              rate:3.50 (450)<br>
+            30-45mins Delievery: 15:00
+          </p>
           </div>
+            <i class="fas fa-angle-right"></i>
         </div>
-        <div class="full-row col-full">
-          <div class="results-card">
-            <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
-            <div class="results-description">
-              <h2>MC'Donald</h2>
-              <p >Burgers, Sandwiches<br>
-                rate:3.50 (450)<br>
-              30-45mins Delievery: 15:00
-            </p>
-            </div>
+        <div class="results-card">
+          <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
+          <div class="results-description">
+            <h2>MC'Donald</h2>
+            <p >Burgers, Sandwiches<br>
+              rate:3.50 (450)<br>
+            30-45mins Delievery: 15:00
+          </p>
           </div>
+          <i class="fas fa-angle-right"></i>
         </div>
-        <div class="full-row col-full">
-          <div class="results-card">
-            <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
-            <div class="results-description">
-              <h2>MC'Donald</h2>
-              <p >Burgers, Sandwiches<br>
-                rate:3.50 (450)<br>
-              30-45mins Delievery: 15:00
-            </p>
-            </div>
+        <div class="results-card">
+          <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
+          <div class="results-description">
+            <h2>MC'Donald</h2>
+            <p >Burgers, Sandwiches<br>
+              rate:3.50 (450)<br>
+            30-45mins Delievery: 15:00
+          </p>
+
           </div>
+          <i class="fas fa-angle-right"></i>
         </div>
-        <div class="full-row col-full">
-          <div class="results-card">
-            <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
-            <div class="results-description">
-              <h2>MC'Donald</h2>
-              <p >Burgers, Sandwiches<br>
-                rate:3.50 (450)<br>
-              30-45mins Delievery: 15:00
-            </p>
-            </div>
+        <div class="results-card">
+          <img src="includes/images/restaurants/mcdonalds.jpg" alt="McDonald's">
+          <div class="results-description">
+            <h2>MC'Donald</h2>
+            <p >Burgers, Sandwiches<br>
+              rate:3.50 (450)<br>
+            30-45mins Delievery: 15:00
+          </p>
+
           </div>
+          <i class="fas fa-angle-right"></i>
         </div>
-      </div>
 
 
     <div class="dialog" id="signin-dialog">
