the resturant page is done

--- a/search_results.html
+++ b/search_results.html
@@ -144,7 +144,7 @@
             </div>
         </div>
     </div>
-
+</div>
     <div class="side-pane" id="cart-side-pane">
         <div class="side-pane-wraper">
             <div class="side-pane-content">
