--- a/orders.html
+++ b/orders.html
@@ -45,7 +45,9 @@
                     </li>
                 </ul>
             </div>
-            <div> <button type="button" class="collapsible"></button></div>
+            <div> 
+                <button type="button" class="collapsible"></button>
+            </div>
             <div class="order-content">
                 <h3 class="card-title">
                     Items
