--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InnerChef</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="includes/css/main.css">
+    <link rel="stylesheet" href="../includes/css/main.css">
     <script src="https://kit.fontawesome.com/e99aa2afc5.js" crossorigin="anonymous"></script>
     <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -107,6 +107,6 @@
 
     </div>
 </footer>
-<script src="includes/js/main.js"></script>
+<script src="../includes/js/main.js"></script>
 </body>
 </html>
