--- a/admin/manage_resturants.html
+++ b/admin/manage_resturants.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasbeera</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="includes/css/main.css">
+    <link rel="stylesheet" href="../includes/css/main.css">
     <script src="https://kit.fontawesome.com/78dee55a2e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -26,26 +26,38 @@
             </nav>
 
         </header>
-        <h2 >Manage users</h2>
+        <h2>Manage resturants</h2>
         <table>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Email</th>
-                <th>Last order</th>
+                <th>phone</th>
                 <th>Total orders</th>
                 <th>Actions</th>
-              </tr>
-              <tr>
+            </tr>
+            <tr>
                 <td>1</td>
                 <td>Islam Mohamad</td>
                 <td>Islammohamedd1@gmail.com</td>
-                <td>31-03-2020 21:30:00 </td>
+                <td>01234567891 </td>
+                <td>15</td>
+                <td>
+                    <a class="nav-link" href="#"><button class="dialog-toggle">Accept</button></a> 
+                    <a class="nav-link" href="#"><button class="dialog-toggle">Reject</button></a>
+                </td>
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Islam Mohamad</td>
+                <td>Islammohamedd1@gmail.com</td>
+                <td>01234567891 </td>
                 <td>15</td>
                 <td><a class="nav-link" href="#"><button class="dialog-toggle">Delete</button></a></td>
-              </tr>
+            </tr>
         </table>
-        
+
     </div>
     <footer>
         <div class="social-menu" >
@@ -69,6 +81,5 @@
             </p>    
         </div>
     </footer>
-
-    <script src="includes/js/main.js"></script>
+    <script src="../includes/js/main.js"></script>
 </body>
