--- a/admin/manage_resturants.html
+++ b/admin/manage_resturants.html
@@ -16,15 +16,22 @@
     <div class="container">
         <header>
             <nav class="top-bar">
+                
                 <div class="navbar-brand">
                     <h1>Tasbeera</h1>
                 </div>
-
-                <div class="nav-links">
-                    <a class="nav-link" href="#"><button class="dialog-toggle">Signout</button></a>
+                <div class="viewline"></div>
+                <div class="txt">
+                    <div>
+                        <p>Viewing menu for</p>
+                        <p class="txtt"><strong>Sector 26, Gurgaon</strong> </p>
+                    </div>
                 </div>
+               <div class="nav-links">
+                   <a class="nav-link" href="#"><button>Signout</button></a>
+               </div>
             </nav>
-
+            
         </header>
         <h2>Manage resturants</h2>
         <table>
