more user pages

--- a/restaurant_items.html
+++ b/restaurant_items.html
@@ -82,10 +82,10 @@
                                     Double-McChicken
                                 </h3>
                                 <div class="card-description">
-                                  price: 55egp<br>
                                     Two peices of the McChicken
                                 </div>
                                 <div class="card-footer">
+                                    <div class="price">EGP 55</div>
                                     <button>add to cart</button>
                                 </div>
                             </div>
@@ -99,10 +99,10 @@
                                     Little-tasty
                                 </h3>
                                 <div class="card-description">
-                                  price: 50egp<br>
                                     Two peices of beef Burger
                                 </div>
                                 <div class="card-footer">
+                                    <div class="price">EGP 50</div>
                                     <button>add to cart</button>
                                 </div>
                             </div>
@@ -116,10 +116,112 @@
                                     McRoyal
                                 </h3>
                                 <div class="card-description">
-                                  price: 45egp<br>
-                                    a peice of the royal beef Burger
+                                    A peice of the royal beef Burger
                                 </div>
                                 <div class="card-footer">
+                                    <div class="price">EGP 45</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/Double-McChicken.PNG" alt="Double-McChicken">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    Double-McChicken
+                                </h3>
+                                <div class="card-description">
+                                    Two peices of the McChicken
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 55</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/Little-tasty.PNG" alt="Little-tasty">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    Little-tasty
+                                </h3>
+                                <div class="card-description">
+                                    Two peices of beef Burger
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 50</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/McRoyal.PNG" alt="McRoyal">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    McRoyal
+                                </h3>
+                                <div class="card-description">
+                                    A peice of the royal beef Burger
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 45</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/Double-McChicken.PNG" alt="Double-McChicken">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    Double-McChicken
+                                </h3>
+                                <div class="card-description">
+                                    Two peices of the McChicken
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 55</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/Little-tasty.PNG" alt="Little-tasty">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    Little-tasty
+                                </h3>
+                                <div class="card-description">
+                                    Two peices of beef Burger
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 50</div>
+                                    <button>add to cart</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-media">
+                                <img src="includes/images/MCsandwiches/McRoyal.PNG" alt="McRoyal">
+                            </div>
+                            <div class="card-content">
+                                <h3 class="card-title">
+                                    McRoyal
+                                </h3>
+                                <div class="card-description">
+                                    A peice of the royal beef Burger
+                                </div>
+                                <div class="card-footer">
+                                    <div class="price">EGP 45</div>
                                     <button>add to cart</button>
                                 </div>
                             </div>
@@ -138,13 +240,13 @@
                             </div>
                             <div class="card-content">
                                 <h3 class="card-title">
-                                    applePie
+                                    Apple Pie
                                 </h3>
                                 <div class="card-description">
-                                  price: 20egp<br>
                                     the best applePie ever
                                 </div>
                                 <div class="card-footer">
+                                    <div class="price">EGP 20</div>
                                     <button>add to cart</button>
                                 </div>
                             </div>
@@ -158,10 +260,10 @@
                                     sundaes
                                 </h3>
                                 <div class="card-description">
-                                  price: 20egp<br>
                                     the sweets icecream ever that you could have
                                 </div>
                                 <div class="card-footer">
+                                    <div class="price">EGP 20</div>
                                     <button>add to cart</button>
                                 </div>
                             </div>
